# aquen

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/brand/: mira-face-concepts.md  mira-kol.md
docs/superpowers/plans/: 2026-06-18-aquen-compliance-publisher.md  2026-06-18-aquen-content-calendar.md  2026-06-18-aquen-higgsfield-virality.md  2026-06-18-aquen-prompt-library.md  2026-06-18-aquen-research-ideation.md  2026-06-18-aquen-toolkit-foundation.md
docs/superpowers/specs/: 2026-06-18-aquen-content-brand-design.md
src/aquen/: adapters.py  analysis.py  cli.py  compliance.py  config.py  db.py  generation.py  higgsfield.py  models.py  prompts.py  publish.py  research.py  scheduling.py  service.py  states.py
tests/: conftest.py  test_adapters.py  test_analysis.py  test_calendar_foundation.py  test_cli.py  test_cli_calendar.py  test_cli_compliance.py  test_cli_encoding.py  test_cli_generation.py  test_cli_prompts.py  test_cli_publish.py  test_cli_research.py  test_compliance_foundation.py  test_compliance_gate.py  test_compliance_logic.py  test_config.py  test_generation_foundation.py  test_generation_service.py  test_higgsfield.py  test_models.py  test_prompt_foundation.py  test_prompts_logic.py  test_prompts_service.py  test_publish_service.py  test_research_models.py  test_research_service.py  test_scheduling_logic.py  test_scheduling_service.py  test_service.py  test_smoke.py  test_states.py  test_virality_gate.py
